--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,29 @@
 .callback-popup.callback .callback__modal-wrapper {
   position: relative;
 }
+.callback-popup.callback .callback__modal-wrapper .btn_close-amw {
+  padding: 4px 12px;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  line-height: 1;
+  font-size: 12px;
+  border: 1px solid #999999;
+}
+.callback-popup.callback .callback__shadow {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0;
+  z-index: 30;
+  transition: opacity 0.3s;
+}
+.callback-popup.callback .callback__shadow.active {
+  opacity: 0.5;
+}
 .callback-popup.callback .modal-popup {
   position: absolute;
   bottom: 80px;
@@ -65,6 +88,7 @@
   transform: translateY(100%);
   transition: opacity 0.2s, transform 0.3s ease-in-out;
   box-shadow: 2px 2px 8px 0 #333333;
+  z-index: 50;
 }
 .callback-popup.callback .modal-popup.active {
   opacity: 1;
