--- a/css/style.sass
+++ b/css/style.sass
@@ -42,6 +42,26 @@
 
     &__modal-wrapper
       position: relative
+      .btn_close-amw
+        padding: 4px 12px
+        position: absolute
+        right: 4px
+        top: 4px
+        line-height: 1
+        font-size: 12px
+        border: 1px solid #999999
+    &__shadow
+      position: fixed
+      top: 0
+      bottom: 0
+      right: 0
+      left: 0
+      background-color: black
+      opacity: 0
+      z-index: 30
+      transition: opacity 0.3s
+      &.active
+        opacity: 0.5
   .modal-popup
     position: absolute
     bottom: 80px
@@ -57,6 +77,7 @@
     transform: translateY(100%)
     transition: opacity 0.2s, transform 0.3s ease-in-out
     box-shadow: 2px 2px 8px 0 #333333
+    z-index: 50
     &.active
       opacity: 1
       transform: translateY(0)
